--- a/wheelPickerTester/res/layout/activity_main.xml
+++ b/wheelPickerTester/res/layout/activity_main.xml
@@ -16,6 +16,8 @@
     <de.mindyourbyte.wheelpicker.AndroidSpinner
         android:id="@+id/androidSpinner1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        app:textScale="40dip"
+        app:values="@array/myArray" />
 
 </LinearLayout>
