--- a/wheelPickerTester/res/values/testArray.xml
+++ b/wheelPickerTester/res/values/testArray.xml
@@ -2,10 +2,18 @@
 <resources>
 
     <string-array name="myArray">
-        <item>Value1</item>
-        <item>Value2</item>
-        <item>Value3</item>
-        <item>Value4</item>
+        <item>Januar</item>
+        <item>Februar</item>
+        <item>März</item>
+        <item>April</item>
+        <item >Mai</item>
+        <item>Juni</item>
+        <item>Juli</item>
+        <item >August</item>
+        <item >September</item>
+        <item>Oktober</item>
+        <item >November</item>
+        <item >Dezember</item>
     </string-array>
 
 </resources>
